--- a/beanvalidation.parent/pom.xml
+++ b/beanvalidation.parent/pom.xml
@@ -1,5 +1,22 @@
+<!--
+  ~ Copyright (c) 2010 Ansgar Konermann
+  ~
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.lightful.experiment</groupId>
@@ -11,7 +28,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-    <distributionManagement>
+  <distributionManagement>
     <downloadUrl>http://lightful.de/mvnrepo/public/releases</downloadUrl>
     <repository>
       <uniqueVersion>false</uniqueVersion>
@@ -28,8 +45,22 @@
       <layout>default</layout>
     </snapshotRepository>
   </distributionManagement>
-  
+
   <dependencies>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>4.0.2.GA</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.6</version>
+      <scope>runtime</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
@@ -75,9 +106,6 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.0</version>
         <configuration>
-          <!--scmCommentPrefix>xxxx</scmCommentPrefix-->
-          <tagBase>https://subversion.hypoport.local/svnrepo/emma-nl/emma/tags</tagBase>
-          <releaseProfiles>ctw,continous-integration</releaseProfiles>
           <goals>deploy</goals>
         </configuration>
       </plugin>
