--- a/beanvalidation.parent/pom.xml
+++ b/beanvalidation.parent/pom.xml
@@ -53,7 +53,6 @@
       <artifactId>hibernate-validator</artifactId>
       <version>4.0.2.GA</version>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
@@ -71,6 +70,12 @@
       <groupId>org.easytesting</groupId>
       <artifactId>fest-assert</artifactId>
       <version>1.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
